# atk-fw-util

./: .gitignore  LICENSE  README.md  flake.nix  main.py  pyproject.toml
src/atk-fw-util/: FirmwareHeader.py  main.py
src/atk_fw_util/: FirmwareHeader.py  __main__.py  cli.py  consts.py  decrypt.py  defs.py  flash.py  pack.py
