[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "atk-fw-util"
version = "0.1.0"
dependencies = []
description = "Alientek T80 firmware decryptor, converter and flasher"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "dozed-dev" }]

[project.scripts]
atk-fw-util = "atk_fw_util.__main__:main"

[tool.poetry]
packages = [
  { include = "atk_fw_util", from = "src" }
]
